<resources>
    <string name="app_name">Github User\'s</string>
    <string name="github_name">Github Name</string>
    <string name="github_username">Github Username</string>
    <string name="github_follower">Followers</string>
    <string name="github_following">Following</string>
    <string name="github_repository">Repositories</string>
    <string name="github_location">Location</string>
    <string name="github_company">Company Name</string>
    <string name="zero">0</string>
    <string name="share_button">Share</string>

    <string-array name="data_username">
        <item>adit-gudhel</item>
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="data_name">
        <item>Aditya Nursyahbani</item>
        <item>Jake Wharton</item>
        <item>Amit Shekar</item>
        <item>Romain Guy</item>
        <item>Christ Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <array name="data_avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </array>

    <string-array name="data_company">
        <item>BPPT</item>
        <item>Google, Inc.</item>
        <item>\@MindOrksOpenSource</item>
        <item>Google</item>
        <item>\@google working on \@android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>\@KotlinID</item>
        <item>\@JVMDeveloperID \@KotlinID \@IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="data_location">
        <item>Jakarta, ID</item>
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <integer-array name="data_repository">
        <item>24</item>
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </integer-array>

    <integer-array name="data_follower">
        <item>4</item>
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </integer-array>

    <integer-array name="data_following">
        <item>1</item>
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </integer-array>
</resources>